--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 
 							<ul class="menu clearfix" id="menu">
 								<li class="active">
-									<a href="#">Inicio</a>
+									<a href="#inicio">Inicio</a>
 								</li>
 								<li class="dropdown">
-									<a href="#">Servicios</a>
+									<a href="#servicios">Servicios</a>
 									<ul ng-if="false">
 										<li class="dropdown">
 											<a class="waves" href="#">Servicios 1</a>
@@ -102,10 +102,10 @@
 									</ul>
 								</li>
 								<li class="">
-									<a href="#">Noticias</a>
+									<a href="#noticias">Noticias</a>
 								</li>
 								<li class="">
-									<a href="#">Trabaja con nosotros</a>
+									<a href="#trabaja-con-nosotros">Trabaja con nosotros</a>
 								</li>
 								<li class="">
 									<a href="#">Contacto</a>
@@ -189,7 +189,7 @@
 			    </section>
 			</div>
 
-			<div class="container">
+			<div class="container" ng-if="seccionWeb" id="inicio">
 				<div class="row">
 					<div class="col-md-9">
 						<h3>{{seccionWeb[1].contenedor[0].titulo}}</h3>
@@ -212,8 +212,8 @@
 					</div><!-- col -->
 				</div><!-- row -->
 			</div><!-- container -->
-
-			<section class="full-section parallax" id="section-26" data-stellar-background-ratio="0.1">
+			<a id="servicios"></a>
+			<section class="full-section parallax" id="section-26" data-stellar-background-ratio="0.1"  ng-if="seccionWeb">
 				<div class="full-section-container">
 
 					<div class="container-fluid">
@@ -234,7 +234,7 @@
 				</div><!-- full-section-container -->
 			</section><!-- full-section -->
 
-			<section class="full-section parallax" id="section-27" data-stellar-background-ratio="0.1">
+			<section class="full-section parallax" id="section-27" data-stellar-background-ratio="0.1" ng-if="seccionWeb">
 				<div class="full-section-container">
 
 					<div class="container-fluid">
@@ -249,7 +249,7 @@
 				</div><!-- full-section-container -->
 			</section><!-- full-section -->
 
-			<div class="container">
+			<div class="container" ng-if="seccionWeb" id="noticias">
                 <div class="row">
                     <div class="col-sm-12">
 
@@ -263,7 +263,7 @@
                 </div><!-- row -->
             </div><!-- container -->
 
-			<div class="container">
+			<div class="container" ng-if="seccionWeb">
                 <div class="row">
                     <div class="col-md-12">
                         <h5><strong>{{seccionWeb[3].contenedor[0].subtitulo}}</strong></h5>
@@ -354,8 +354,8 @@
                     </div><!-- col -->
                 </div><!-- row -->
             </div><!-- container -->
-
-			<section class="full-section dark-section parallax" id="section-28" data-stellar-background-ratio="0.1">
+            <a id="trabaja-con-nosotros"></a>
+			<section class="full-section dark-section parallax" id="section-28" data-stellar-background-ratio="0.1" ng-if="seccionWeb">
 
 				<div class="full-section-overlay-color"></div>
 
