bug en configruaracion y secciones

--- a/admin/app/pages/config/config.html
+++ b/admin/app/pages/config/config.html
@@ -179,7 +179,7 @@
                     <div class="form-group col-md-6 col-sm-12">
                       <label for="skype" class="col-sm-3 control-label minotaur-label">Skype : </label>
                       <div class="col-sm-9">
-                        <input type="text" class="form-control  text-center underline-input" id="skype" placeholder="WhatsApp" ng-model="cg.fData.whatsapp">
+                        <input type="text" class="form-control  text-center underline-input" id="skype" placeholder="Skype" ng-model="cg.fData.skype">
                       </div>
                     </div>
                     <div class="form-group col-md-6 col-sm-12">
