--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 				</div><!-- row -->
 			</div><!-- container -->
 			<a id="servicios"></a>
-			<section class="full-section parallax" id="section-26" data-stellar-background-ratio="0.1"  ng-if="seccionWeb">
+			<section class="full-section parallax" id="section-26" data-stellar-background-ratio="0.1"  ng-if="seccionWeb" style="background-image: url(uploads/banners/FONDO/{{seccionWeb[2].contenedor[0].imagen_bg}});">
 				<div class="full-section-container">
 
 					<div class="container-fluid">
@@ -234,7 +234,7 @@
 				</div><!-- full-section-container -->
 			</section><!-- full-section -->
 
-			<section class="full-section parallax" id="section-27" data-stellar-background-ratio="0.1" ng-if="seccionWeb">
+			<section class="full-section parallax" id="section-27" data-stellar-background-ratio="0.1" ng-if="seccionWeb" style="background-image: url(uploads/banners/FONDO/{{seccionWeb[2].contenedor[1].imagen_bg}});">
 				<div class="full-section-container">
 
 					<div class="container-fluid">
@@ -355,7 +355,7 @@
                 </div><!-- row -->
             </div><!-- container -->
             <a id="trabaja-con-nosotros"></a>
-			<section class="full-section dark-section parallax" id="section-28" data-stellar-background-ratio="0.1" ng-if="seccionWeb">
+			<section class="full-section dark-section parallax" id="section-28" data-stellar-background-ratio="0.1" ng-if="seccionWeb"style="background-image: url(uploads/banners/FONDO/{{seccionWeb[4].contenedor[0].imagen_bg}});">
 
 				<div class="full-section-overlay-color"></div>
 
@@ -472,15 +472,19 @@
 								<h6 class="widget-title">Contact</h6>
 
 								<ul>
-									<li>
+									<li ng-if="dataWeb.direccion">
 										<i class="fa fa-map-marker"></i>
 										{{dataWeb.direccion}}
 									</li>
-									<li>
+									<li ng-if="dataWeb.telefono">
 										<i class="fa fa-phone"></i>
 										{{dataWeb.telefono}}
 									</li>
-									<li>
+									<li ng-if="dataWeb.skype">
+										<i class="fa fa-skype"></i>
+										{{dataWeb.skype}}
+									</li>
+									<li ng-if="dataWeb.correo">
 										<i class="fa fa-envelope"></i>
 										<a href="mailto:{{dataWeb.correo}}">{{dataWeb.correo}}</a>
 									</li>
