intento de inicio

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<div class="col-sm-3">
 						<!-- LOGO -->
 						<div id="logo">
-							<a href="index.html">
+							<a href="{{dirWeb}}">
 								<img src="assets/images/logo-dark.png" alt="">
 							</a>
 						</div><!-- LOGO -->
