--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 				          visibility-Levels="{{slider.visibilityLevels}}"
 				          hide-Thumbs-On-Mobile="{{slider.hideThumbsOnMobile}}"
 				          slides="slides"
-				          slider-Template-Url="templates/slider.tpl2.html"
+				          slider-Template-Url="templates/slider.tpl2.php"
 				        >
 				        </div>
 			      	</div>
