--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 						<div class="row">
 							<div class="col-sm-12">
 
-								<div ng-bind-html="seccionWeb[4].contenedor[0].contenido"></div>
+								<div class="text-center" ng-bind-html="seccionWeb[4].contenedor[0].contenido"></div>
 
 							</div><!-- col -->
 						</div><!-- row -->
