texto en banners

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
 								<br>
 
-								<a ng-show="seccionWeb[2].contenedor[0].tiene_boton" class="btn btn-default-1 waves" href="#">Purchase now <i class="fa fa-angle-right"></i></a>
+								<a ng-show="seccionWeb[2].contenedor[0].tiene_boton" class="btn btn-default-1 waves" href="#">Donde estamos <i class="fa fa-angle-right"></i></a>
 
 							</div><!-- col -->
 						</div><!-- row -->
