--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="{{dataWeb.keywords}}">
 	<meta name="description" content="{{dataWeb.descripcion_we}}">
 	<base href="{{dirWeb}}">
-	<title>{{dataWeb.titulo_we}}</title>
+	<title ng-bind="dataWeb.titulo_we"></title>
 	<!-- FAVICON AND APPLE TOUCH -->
 	<link rel="shortcut icon" href="assets/images/favicon.png">
 	<link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-180x180.png">
@@ -189,214 +189,11 @@
 			    </section>
 			</div>
 
-			<div class="container" ng-if="seccionWeb" id="inicio">
-				<div class="row">
-					<div class="col-md-9">
-						<h3>{{seccionWeb[1].contenedor[0].titulo}}</h3>
-						<h5><strong>{{seccionWeb[1].contenedor[0].subtitulo}}</strong></h5>
-						<br>
-						<div ng-bind-html="seccionWeb[1].contenedor[0].contenido"></div>
-						<br>
-						<p ng-show="seccionWeb[1].contenedor[0].tiene_boton"><a class="btn btn-default-1 waves" href="#">Discover</a></p>
-					</div><!-- col -->
-					<div class="col-md-3" ng-if="seccionWeb[1].contenedor[0].acepta_imagen">
-						<div class="row">
-							<div class="col-sm-12">
-								<p><img class="wow fadeInRight" ng-src="uploads/banners/LATERAL/{{seccionWeb[1].contenedor[0].imagen}}" alt=""></p>
-							</div><!-- col -->
-							<!-- <div class="col-sm-6">
-								<p><img class="wow fadeInRight" src="images/index/image-21.jpg" alt="" data-wow-delay="0.1s"></p>
-							</div> --><!-- col -->
-						</div><!-- row -->
-
-					</div><!-- col -->
-				</div><!-- row -->
-			</div><!-- container -->
+			<div ng-include="'templates/seccion/inicio.html'" autoscroll></div>
 			<a id="servicios"></a>
-			<section class="full-section parallax" id="section-26" data-stellar-background-ratio="0.1"  ng-if="seccionWeb" style="background-image: url(uploads/banners/FONDO/{{seccionWeb[2].contenedor[0].imagen_bg}});padding: 50px 0 10px;">
-				<div class="full-section-container">
-
-					<div class="container-fluid">
-						<div class="row">
-							<div class="col-md-offset-5 col-sm-offset-1 col-md-7 col-sm-10">
-
-								<h2>{{seccionWeb[2].contenedor[0].titulo}}</h2>
-								<div ng-bind-html="seccionWeb[2].contenedor[0].contenido"></div>
-
-								<br>
-
-								<a ng-show="seccionWeb[2].contenedor[0].tiene_boton" class="btn btn-default-1 waves" href="#">Donde estamos <i class="fa fa-angle-right"></i></a>
-
-							</div><!-- col -->
-						</div><!-- row -->
-					</div><!-- container-fluid -->
-
-				</div><!-- full-section-container -->
-			</section><!-- full-section -->
-
-			<section class="full-section parallax" id="section-27" data-stellar-background-ratio="0.1" ng-if="seccionWeb" style="background-image: url(uploads/banners/FONDO/{{seccionWeb[2].contenedor[1].imagen_bg}});padding: 50px 0 10px;">
-				<div class="full-section-container">
-
-					<div class="container-fluid">
-						<div class="row">
-							<div class="col-sm-offset-1 col-lg-4 col-md-6 col-sm-10">
-								<h2>{{seccionWeb[2].contenedor[1].titulo}}</h2>
-								<div ng-bind-html="seccionWeb[2].contenedor[1].contenido"></div>
-							</div><!-- col -->
-						</div><!-- row -->
-					</div><!-- container-fluid -->
-
-				</div><!-- full-section-container -->
-			</section><!-- full-section -->
-
-			<div class="container" ng-if="seccionWeb" id="trabaja-con-nosotros">
-                <div class="row">
-                    <div class="col-sm-12">
-
-                        <div class="title text-center">
-
-							<h3>{{seccionWeb[4].contenedor[0].titulo}}</h3>
-
-						</div><!-- headline -->
-
-                    </div><!-- col -->
-                </div><!-- row -->
-            </div><!-- container -->
-
-			<div class="container text-center" ng-if="seccionWeb">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h5><strong>{{seccionWeb[4].contenedor[0].subtitulo}}</strong></h5>
-						<br>
-						<div ng-bind-html="seccionWeb[4].contenedor[0].contenido"></div>
-						<br>
-						<p ng-show="seccionWeb[4].contenedor[0].tiene_boton"><a class="btn btn-default-1 waves" href="#">Discover</a></p>
-						<br class="hidden-lg hidden-md">
-                    </div><!-- col -->
-					<div class="col-md-8" ng-show="false">
-
-                        <div class="row">
-							<div class="col-sm-6">
-
-								<div class="service-box style-4 wow fadeIn">
-
-									<i class="halcyon-icon-worldwide-1"></i>
-
-									<h6><a href="single-service.html">World recognicion</a></h6>
-
-									<div class="service-box-content">
-
-										<p>Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Pellentesque vitae dui.</p>
-
-									</div><!-- service-box-content -->
-
-								</div><!-- service-box -->
-
-							</div><!-- col -->
-							<div class="col-sm-6">
-
-								<div class="service-box style-4 wow fadeIn" data-wow-delay="0.1s">
-
-									<i class="halcyon-icon-network"></i>
-
-									<h6><a href="single-service.html">Test our products</a></h6>
-
-									<div class="service-box-content">
-
-										<p>Etiam turpis tortor, finibus quis urna eu, venenatis dapibus leo. Etiam sit amet
-										fringilla.</p>
-
-									</div><!-- service-box-content -->
-
-								</div><!-- service-box -->
-
-							</div><!-- col -->
-						</div><!-- row -->
-
-						<div class="row">
-							<div class="col-sm-6">
-
-								<div class="service-box style-4 wow fadeIn">
-
-									<i class="halcyon-icon-database-3"></i>
-
-									<h6><a href="single-service.html">Profit's on the way</a></h6>
-
-									<div class="service-box-content">
-
-										<p>Aliquam pretium diam a elit dignissim, sit amet sodales neque tristique. Duis non.</p>
-
-									</div><!-- service-box-content -->
-
-								</div><!-- service-box -->
-
-							</div><!-- col -->
-							<div class="col-sm-6">
-
-								<div class="service-box style-4 wow fadeIn" data-wow-delay="0.1s">
-
-									<i class="halcyon-icon-paper-plane-1"></i>
-
-									<h6><a href="single-service.html">Contact us</a></h6>
-
-									<div class="service-box-content">
-
-										<p>Praesent et laoreet tortor. Ut molestie ac dolor ut maximus. Vestibulum vestibulum
-										enim.</p>
-
-									</div><!-- service-box-content -->
-
-								</div><!-- service-box -->
-
-							</div><!-- col -->
-						</div><!-- row -->
-
-                    </div><!-- col -->
-                </div><!-- row -->
-            </div><!-- container -->
-
-			<section class="full-section dark-section parallax" id="section-28" data-stellar-background-ratio="0.1" ng-if="seccionWeb"style="background-image: url(uploads/banners/FONDO/{{seccionWeb[4].contenedor[0].imagen_bg}});">
-
-				<div class="full-section-overlay-color"></div>
-
-				<div class="full-section-container">
-
-					<div class="container">
-						<div class="row">
-							<div class="col-sm-12">
-
-								<div class="title text-center" style="margin-bottom:15px;">
-
-									<h3>{{seccionWeb[3].contenedor[0].titulo}}</h3>
-
-								</div><!-- headline -->
-
-							</div><!-- col -->
-						</div><!-- row -->
-					</div><!-- container -->
-
-					<div class="container">
-						<div class="row">
-							<div class="col-sm-12">
-
-								<h5 class="text-center"><strong>{{seccionWeb[3].contenedor[0].subtitulo}}</strong></h5>
-
-							</div><!-- col -->
-						</div><!-- row -->
-					</div><!-- container -->
-
-					<div class="container">
-						<div class="row">
-							<div class="col-sm-12">
-
-								<div class="text-center" ng-bind-html="seccionWeb[3].contenedor[0].contenido"></div>
-
-							</div><!-- col -->
-						</div><!-- row -->
-					</div><!-- container -->
-
-				</div><!-- full-section-container -->
-			</section><!-- full-section -->
+			<div ng-include="'templates/seccion/servicios.html'" ></div>
+			<div ng-include="'templates/seccion/trabaja-con-nosotros.html'" ></div>
+			<div ng-include="'templates/seccion/fotos-online.php'" ></div>
 		</div><!-- PAGE CONTENT -->
 		<!-- FOOTER -->
 		<footer id="footer-container">
