--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							</a>
 						</div><!-- LOGO -->
 					</div><!-- col -->
-					<div class="col-sm-9">
+					<div class="col-sm-7">
 						<!-- MENU -->
 						<nav>
 
@@ -127,12 +127,16 @@
 								<!-- <li class="login" ng-if="!fSessionCI">
 									<a class="btn btn-default-2 waves" href="" fancybox ng-click="openFancybox('popups/login_view.html')">Acceso a tu cuenta</a>
 								</li> -->
-								<li class="login">
-									<a class="btn btn-default-2 waves" href="{{dirWeb}}admin" target="_blank">Acceso a tu cuenta!</a>
-								</li>
 							</ul>
 
+
 						</nav>
+					</div>
+					<div class="col-sm-2">
+						<div class="login">
+							<a class="btn btn-default-2 waves mb-0" href="{{dirWeb}}admin" target="_blank" style="margin-bottom: 0px;margin-top: 12px;">Acceso a tu cuenta!</a>
+						</div>
+
 					</div>
 				</div>
 			</div>
