--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 					</div>
 					<div class="col-sm-2">
 						<div class="login">
-							<a class="btn btn-default-2 waves mb-0" href="{{dirWeb}}admin" target="_blank" style="margin-bottom: 0px;margin-top: 12px;">Acceso a tu cuenta!</a>
+							<a class="btn btn-default-2 waves" href="{{dirWeb}}admin" target="_blank" style="margin-bottom: 0px;margin-top: 12px;">ACCESO A TU CUENTA!</a>
 						</div>
 
 					</div>
