--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
 	<!-- <script src="bower_components/angular-cookies/angular-cookies.js"></script> -->
 	<!-- <script src="bower_components/ng-facebook/ngFacebook.js"></script> -->
 	<script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+	<script src="bower_components/angular-g-recaptcha/angular-g-recaptcha.js"></script>
 	<script src="bower_components/oclazyload/dist/ocLazyLoad.js"></script>
 
 	<!-- VIEWPORT -->
