--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
 	<script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 	<script src="bower_components/angular-g-recaptcha/angular-g-recaptcha.js"></script>
 	<script src="bower_components/oclazyload/dist/ocLazyLoad.js"></script>
+	<script src="//www.google.com/recaptcha/api.js?render=explicit&onload=initGRecaptcha"></script>
 
 	<!-- VIEWPORT -->
 	<script src="assets/plugins/viewport/jquery.viewport.js"></script>
