--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
 	<script src="bower_components/angular/angular.js"></script>
-
+	<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls-0.14.1.min.js"></script>
 	<!-- <script src="bower_components/angular-route/angular-route.js"></script> -->
 	<!-- <script src="bower_components/angular-cookies/angular-cookies.js"></script> -->
 	<!-- <script src="bower_components/ng-facebook/ngFacebook.js"></script> -->
