--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<ul class="menu clearfix nav navbar-nav" id="menu">
 								<li><a href="#inicio" ng-click="scrollTo('inicio');$event.preventDefault();">Inicio</a></li>
 								<li><a href="#servicios" ng-click="scrollTo('servicios');$event.preventDefault();">Servicios</a></li>
-								<li><a href="#" ng-click="verBlog();$event.preventDefault();">Noticias</a></li>
+								<li><a href="#blog" ng-click="verBlog();$event.preventDefault();">Noticias</a></li>
 								<li><a href="#trabaja" ng-click="scrollTo('trabaja');$event.preventDefault();">Trabaja con nosotros</a></li>
 								<li><a href="#contacto" ng-click="scrollTo('contacto');$event.preventDefault();">Contacto</a></li>
 							</ul>
