--- a/index.html
+++ b/index.html
@@ -339,6 +339,8 @@
 	<script src="assets/js/index.config.js"></script>
 	<script src="assets/js/index.controller.js"></script>
 
+	<script src="assets/js/controllers/Blog.js"></script>
+
 	<script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
         async defer></script>
 
